--- a/androidApp/src/main/res/values-iw/strings.xml
+++ b/androidApp/src/main/res/values-iw/strings.xml
@@ -237,8 +237,8 @@
     <string name="analysis_domain_age_title">Domain Age Alert</string>
     <string name="analysis_entropy_desc">Domain appears randomly generated, common in phishing.</string>
     <string name="analysis_entropy_title">Random Domain</string>
-    <string name="analysis_ip_host_desc">URL uses an IP address instead of a domain name, which is unusual for legitimate sites.</string>
-    <string name="analysis_ip_host_title">IP Address Host</string>
+    <string name="analysis_ip_host_title">מארח כתובת IP</string>
+    <string name="analysis_ip_host_desc">ה-URL משתמש בכתובת IP במקום שם דומיין, דבר שאינו רגיל עבור אתרים לגיטימיים.</string>
     <string name="analysis_long_url_desc">URL is unusually long, which can be used to hide the actual destination.</string>
     <string name="analysis_long_url_title">Excessive URL Length</string>
     <string name="analysis_port_desc">URL uses a non-standard port number.</string>
@@ -251,86 +251,9 @@
     <string name="analysis_scheme_title">Dangerous Scheme</string>
     <string name="analysis_subdomain_desc">URL has an unusual number of subdomains, which can be used to mislead users.</string>
     <string name="analysis_subdomain_title">Deep Subdomain</string>
-    <string name="analysis_suspicious_path_desc">URL path contains keywords commonly used in phishing.</string>
-    <string name="analysis_suspicious_path_title">Suspicious Path</string>
-    <string name="analysis_time_label">Analysis Time</string>
     <string name="analysis_tld_desc">Domain uses a top-level domain commonly associated with malicious sites.</string>
     <string name="analysis_tld_desc_specific">The .%1$s TLD is commonly used for malicious sites.</string>
     <string name="analysis_tld_title">Risky TLD</string>
-    <string name="attack_analysis">Attack Analysis</string>
-    <string name="attack_chain">Attack Chain</string>
-    <string name="auto_copy_subtitle">Copy safe URLs automatically</string>
-    <string name="auto_copy_title">Auto-copy Safe Links</string>
-    <string name="available_offline">Available offline</string>
-    <string name="beat_the_bot_ai_analysis">AI ANALYSIS</string>
-    <string name="beat_the_bot_bot_name">QR-Shield Bot</string>
-    <string name="beat_the_bot_incorrect_hint">Incorrect! Try again.</string>
-    <string name="beat_the_bot_incorrect_legit">Oops! This was actually Legitimate.</string>
-    <string name="beat_the_bot_incorrect_phishing">Oops! This was actually a Phishing attack.</string>
-    <string name="beat_the_bot_latency_fmt">Latency: %1$dms</string>
-    <string name="beat_the_bot_live_scoreboard">Live Scoreboard</string>
-    <string name="beat_the_bot_loading">Loading...</string>
-    <string name="beat_the_bot_preview_hidden">Preview Hidden</string>
-    <string name="beat_the_bot_pts_fmt">%1$d pts</string>
-    <string name="beat_the_bot_safe">Safe</string>
-    <string name="beat_the_bot_session_fmt">Session: #%1$s</string>
-    <string name="beat_the_bot_signals_detected_fmt">%1$d signals detected</string>
-    <string name="beat_the_bot_streak_fmt">Streak: %1$d 🔥</string>
-    <string name="beat_the_bot_suspicious">Suspicious</string>
-    <string name="beat_the_bot_vs_mode">VS MODE</string>
-    <string name="beat_the_bot_why_flagged">Why the bot flagged it %1$s:</string>
-    <string name="beat_the_bot_you">You</string>
-    <string name="biometric_unlock_subtitle">Require FaceID for settings</string>
-    <string name="biometric_unlock_title">Biometric Unlock</string>
-    <string name="blocklist_active_rules">ACTIVE RULES</string>
-    <string name="blocklist_added_date">Added %s</string>
-    <string name="blocklist_block_action">Block Domain</string>
-    <string name="blocklist_block_domain">Block a Domain</string>
-    <string name="blocklist_domain_name">DOMAIN NAME</string>
-    <string name="blocklist_domains_count">%d Domains</string>
-    <string name="blocklist_enter_root_domain">Enter the root domain (e.g., example.com). Subdomains will automatically be blocked by the AI engine.</string>
-    <string name="blocklist_import_csv_json">Import from CSV/JSON</string>
-    <string name="blocklist_manage_desc">Manage domains forbidden by local policy.</string>
-    <string name="blocklist_offline_synced">Offline-first • Synced</string>
-    <string name="blocklist_remove_protocol">Please remove \"http://\" or \"https://\" protocol.</string>
-    <string name="blocklist_subtitle">Blocked rules</string>
-    <string name="blocklist_title">Blocklist</string>
-    <string name="camera_permission_denied">Camera permission denied. Please enable in settings.</string>
-    <string name="camera_permission_rationale">Camera access is needed to scan QR codes</string>
-    <string name="category_all">All</string>
-    <string name="category_content">Content</string>
-    <string name="category_domain">Domain</string>
-    <string name="category_redirect">Redirect</string>
-    <string name="category_ssl">SSL/TLS</string>
-    <string name="category_url_pattern">URL Pattern</string>
-    <string name="cd_action">Action</string>
-    <string name="cd_add">Add</string>
-    <string name="cd_add_domain">Add domain</string>
-    <string name="cd_analyzing_url">Analyzing URL for security threats. Please wait.</string>
-    <string name="cd_app_logo_full">QR Shield logo</string>
-    <string name="cd_app_tagline">QR Shield, Phishing Detection App</string>
-    <string name="cd_available_offline">Available offline</string>
-    <string name="cd_back_button">Go back</string>
-    <string name="cd_camera_error">Error: %s</string>
-    <string name="cd_camera_preview">Camera preview for QR code scanning. Position a QR code in the center of the screen to scan it.</string>
-    <string name="cd_camera_scanning">Camera scanning mode. Point camera at a QR code.</string>
-    <string name="cd_choose_from_gallery">Choose QR code image from photo gallery</string>
-    <string name="cd_clear_all">Clear All</string>
-    <string name="cd_clear_history">Clear all scan history</string>
-    <string name="cd_clear_search">Clear search</string>
-    <string name="cd_close_scanner">Close scanner and return to home</string>
-    <string name="cd_copy_button">Copy URL to clipboard</string>
-    <string name="cd_dashboard_screen">Dashboard home screen</string>
-    <string name="cd_delete_item">Delete this scan from history</string>
-    <string name="cd_dismiss_hint">Dismiss hint</string>
-    <string name="cd_dismiss_result">Dismiss result and return home</string>
-    <string name="cd_enter_url">Enter URL to analyze</string>
-    <string name="cd_error">Error</string>
-    <string name="cd_error_occurred">Error occurred: %s. Tap Try Again to retry.</string>
-    <string name="cd_filter_by">Filter by %s</string>
-    <string name="cd_filter_malicious">Show only malicious scans</string>
-    <string name="cd_filter_safe">Show only safe scans</string>
-    <string name="cd_filter_suspicious">Show only suspicious scans</string>
     <string name="cd_gallery_button">Select QR code image from photo gallery</string>
     <string name="cd_history_item">Scan history item</string>
     <string name="cd_history_screen">Scan history screen</string>
@@ -365,6 +288,15 @@
     <string name="cd_scanned_url">Scanned URL: %s</string>
     <string name="cd_scanner_screen">QR code scanner screen</string>
     <string name="cd_search_history">Search scan history</string>
+    <string name="cd_filter_safe">Show only safe scans</string>
+    <string name="cd_filter_suspicious">Show only suspicious scans</string>
+    <string name="cd_filter_malicious">Show only malicious scans</string>
+    
+    <!-- History Filter Tabs -->
+    <string name="filter_all">הכל</string>
+    <string name="filter_safe">בטוח</string>
+    <string name="filter_suspicious">חשוד</string>
+    <string name="filter_malicious">זדוני</string>
     <string name="cd_search_history_url">Search scan history by URL</string>
     <string name="cd_security">Security</string>
     <string name="cd_settings_screen">Settings screen with app preferences</string>
@@ -405,8 +337,8 @@
     <string name="factor_category_ml">ML SCORE</string>
     <string name="factor_domain_check">Domain Analysis</string>
     <string name="factor_domain_check_desc">Domain structure analyzed for phishing patterns.</string>
-    <string name="factor_ip_address">IP Address Host</string>
-    <string name="factor_ip_address_desc">URL uses IP address instead of domain name. Unusual for legitimate sites.</string>
+    <string name="factor_ip_address">מארח כתובת IP</string>
+    <string name="factor_ip_address_desc">ה-URL משתמש בכתובת IP במקום שם דומיין. לא רגיל עבור אתרים לגיטימיים.</string>
     <string name="factor_ml_desc">Machine learning model confidence: %1$d%%</string>
     <string name="factor_ml_title">ML Phishing Score</string>
     <string name="feature_explainable_desc">לא רק "חסום". אנו מספקים פירוט היוריסטי של פרמטרי URL והפניות.</string>
@@ -713,4 +645,79 @@
     <string name="share_analysis_title">שתף ניתוח</string>
     <string name="share_threat_analysis_title">שתף ניתוח איום</string>
     <string name="report_threat_title">דווח על איום</string>
+
+    <string name="attack_analysis">Attack Analysis</string>
+    <string name="blocklist_domains_count">%d Domains</string>
+    <string name="blocklist_import_csv_json">Import from CSV/JSON</string>
+    <string name="cd_camera_scanning">Camera scanning mode. Point camera at a QR code.</string>
+    <string name="cd_app_tagline">QR Shield, Phishing Detection App</string>
+    <string name="beat_the_bot_bot_name">QR-Shield Bot</string>
+    <string name="cd_dismiss_hint">Dismiss hint</string>
+    <string name="category_ssl">SSL/TLS</string>
+    <string name="analysis_suspicious_path_desc">URL path contains keywords commonly used in phishing.</string>
+    <string name="cd_back_button">Go back</string>
+    <string name="beat_the_bot_streak_fmt">Streak: %1$d 🔥</string>
+    <string name="blocklist_title">Blocklist</string>
+    <string name="camera_permission_rationale">Camera access is needed to scan QR codes</string>
+    <string name="beat_the_bot_signals_detected_fmt">%1$d signals detected</string>
+    <string name="cd_clear_history">Clear all scan history</string>
+    <string name="beat_the_bot_preview_hidden">Preview Hidden</string>
+    <string name="category_url_pattern">URL Pattern</string>
+    <string name="beat_the_bot_suspicious">Suspicious</string>
+    <string name="cd_error">Error</string>
+    <string name="cd_camera_error">Error: %s</string>
+    <string name="auto_copy_title">Auto-copy Safe Links</string>
+    <string name="beat_the_bot_ai_analysis">AI ANALYSIS</string>
+    <string name="cd_enter_url">Enter URL to analyze</string>
+    <string name="beat_the_bot_pts_fmt">%1$d pts</string>
+    <string name="category_all">All</string>
+    <string name="analysis_time_label">Analysis Time</string>
+    <string name="cd_error_occurred">Error occurred: %s. Tap Try Again to retry.</string>
+    <string name="beat_the_bot_live_scoreboard">Live Scoreboard</string>
+    <string name="beat_the_bot_vs_mode">VS MODE</string>
+    <string name="cd_dashboard_screen">Dashboard home screen</string>
+    <string name="camera_permission_denied">Camera permission denied. Please enable in settings.</string>
+    <string name="biometric_unlock_subtitle">Require FaceID for settings</string>
+    <string name="cd_action">Action</string>
+    <string name="beat_the_bot_incorrect_legit">Oops! This was actually Legitimate.</string>
+    <string name="cd_add_domain">Add domain</string>
+    <string name="beat_the_bot_loading">Loading...</string>
+    <string name="beat_the_bot_you">You</string>
+    <string name="cd_clear_search">Clear search</string>
+    <string name="cd_camera_preview">Camera preview for QR code scanning. Position a QR code in the center of the screen to scan it.</string>
+    <string name="analysis_suspicious_path_title">Suspicious Path</string>
+    <string name="beat_the_bot_incorrect_phishing">Oops! This was actually a Phishing attack.</string>
+    <string name="blocklist_subtitle">Blocked rules</string>
+    <string name="cd_analyzing_url">Analyzing URL for security threats. Please wait.</string>
+    <string name="category_content">Content</string>
+    <string name="cd_filter_by">Filter by %s</string>
+    <string name="beat_the_bot_incorrect_hint">Incorrect! Try again.</string>
+    <string name="cd_close_scanner">Close scanner and return to home</string>
+    <string name="blocklist_active_rules">ACTIVE RULES</string>
+    <string name="category_domain">Domain</string>
+    <string name="cd_dismiss_result">Dismiss result and return home</string>
+    <string name="cd_choose_from_gallery">Choose QR code image from photo gallery</string>
+    <string name="blocklist_block_action">Block Domain</string>
+    <string name="cd_delete_item">Delete this scan from history</string>
+    <string name="attack_chain">Attack Chain</string>
+    <string name="blocklist_block_domain">Block a Domain</string>
+    <string name="biometric_unlock_title">Biometric Unlock</string>
+    <string name="blocklist_manage_desc">Manage domains forbidden by local policy.</string>
+    <string name="available_offline">Available offline</string>
+    <string name="category_redirect">Redirect</string>
+    <string name="beat_the_bot_safe">Safe</string>
+    <string name="blocklist_domain_name">DOMAIN NAME</string>
+    <string name="blocklist_enter_root_domain">Enter the root domain (e.g., example.com). Subdomains will automatically be blocked by the AI engine.</string>
+    <string name="cd_add">Add</string>
+    <string name="beat_the_bot_why_flagged">Why the bot flagged it %1$s:</string>
+    <string name="blocklist_added_date">Added %s</string>
+    <string name="blocklist_offline_synced">Offline-first • Synced</string>
+    <string name="beat_the_bot_latency_fmt">Latency: %1$dms</string>
+    <string name="blocklist_remove_protocol">Please remove \"http://\" or \"https://\" protocol.</string>
+    <string name="cd_app_logo_full">QR Shield logo</string>
+    <string name="cd_clear_all">Clear All</string>
+    <string name="cd_copy_button">Copy URL to clipboard</string>
+    <string name="auto_copy_subtitle">Copy safe URLs automatically</string>
+    <string name="cd_available_offline">Available offline</string>
+    <string name="beat_the_bot_session_fmt">Session: #%1$s</string>
 </resources>
