🚀 Release preparation v2.0.36 (KotlinConf 2025-2026 Submission)
📦 Release Changes:
- Fresh MehrGuard-2.0.36-debug.apk build (43MB)
- Added SHA-256 checksum for APK verification
- Professional RELEASE_NOTES.md with full platform details

🧹 Cleanup:
- Removed .DS_Store, .bak files, and sensitive keystore data
- Moved internal docs to docs/internal/ (PARITY_LOG, EXPORT_SURFACE, etc.)
- Removed old branding artifacts (mehr-guard-iconset/, .agent/)
- Cleaned desktopApp/bin/ generated binaries

🔧 Branding Fixes:
- Updated Theme.QRShield → Theme.MehrGuard in themes.xml
- Fixed baseline-prof.txt class references
- Updated all 18 language string files (QR-Shield Bot → Mehr Guard Bot)
- Removed TODO comments from production screens

📚 Documentation Updates:
- Updated JUDGE_QUICKSTART.md with correct APK name
- Updated README.md references
- Updated VIDEO_DEMO.md APK instructions
- Added entries to .gitignore for sensitive files

✅ All builds verified: Android, iOS, Desktop, Web JS, Web Wasm

--- a/androidApp/src/main/res/values-es/strings.xml
+++ b/androidApp/src/main/res/values-es/strings.xml
@@ -353,7 +353,7 @@
     <string name="beat_the_bot_vs_mode">MODO VS</string>
     <string name="beat_the_bot_you">Tú</string>
     <string name="beat_the_bot_streak_fmt">Racha: %1$d 🔥</string>
-    <string name="beat_the_bot_bot_name">QR-Shield Bot</string>
+    <string name="beat_the_bot_bot_name">Mehr Guard Bot</string>
     <string name="beat_the_bot_latency_fmt">Latencia: %1$dms</string>
     <string name="beat_the_bot_pts_fmt">%1$d pts</string>
     <string name="beat_the_bot_preview_hidden">Vista previa oculta</string>
