--- a/androidApp/src/main/res/values-fa/strings.xml
+++ b/androidApp/src/main/res/values-fa/strings.xml
@@ -267,7 +267,7 @@
     <string name="auto_copy_title">کپی خودکار لینک‌های امن</string>
     <string name="available_offline">دسترسی آفلاین</string>
     <string name="beat_the_bot_ai_analysis">AI ANALYSIS</string>
-    <string name="beat_the_bot_bot_name">QR-Shield Bot</string>
+    <string name="beat_the_bot_bot_name">Mehr Guard Bot</string>
     <string name="beat_the_bot_incorrect_hint">Incorrect! Try again.</string>
     <string name="beat_the_bot_incorrect_legit">Oops! This was actually Legitimate.</string>
     <string name="beat_the_bot_incorrect_phishing">Oops! This was actually a Phishing attack.</string>
