--- a/androidApp/src/main/res/values-hi/strings.xml
+++ b/androidApp/src/main/res/values-hi/strings.xml
@@ -353,7 +353,7 @@
     <string name="beat_the_bot_vs_mode">VS मोड</string>
     <string name="beat_the_bot_you">आप</string>
     <string name="beat_the_bot_streak_fmt">लकीर: %1$d 🔥</string>
-    <string name="beat_the_bot_bot_name">QR-Shield Bot</string>
+    <string name="beat_the_bot_bot_name">Mehr Guard Bot</string>
     <string name="beat_the_bot_latency_fmt">विलंबता: %1$dms</string>
     <string name="beat_the_bot_pts_fmt">%1$d अंक</string>
     <string name="beat_the_bot_preview_hidden">प्रीव्यू छिपा हुआ</string>
